// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables 1`] = `
<View>
  <ForwardRef
    disabled={true}
    onPress={[Function]}
  >
    <View>
      <View>
        <Text>
          Push Me
        </Text>
      </View>
    </View>
  </ForwardRef>
</View>
`;

exports[`matches last snapshot 1`] = `
<View>
  <ForwardRef
    disabled={false}
    onPress={[Function]}
  >
    <View>
      <View>
        <Text>
          Push Me
        </Text>
      </View>
    </View>
  </ForwardRef>
</View>
`;
